Add class decorator plugin

--- a/.babelrc
+++ b/.babelrc
@@ -20,6 +20,11 @@
     // class static properties
     [ "@babel/plugin-proposal-class-properties", { "loose" : true } ],
 
+    // class decorators
+    [ "@babel/plugin-proposal-decorators", {
+      "legacy": true,
+    } ],
+
     // --- Currently crashes parcel. Duplicate plugin.
     // --- https://github.com/parcel-bundler/parcel/pull/2032
     // let n = { x, y, ...z };
