--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "setup": "npm run clean && npm i && flow-typed install && npm audit fix",
     "update": "npm-check -u",
     "----DEV--------------------------------------": "",
+    "start:mock": "json-server --watch mock-db.json",
     "start": "parcel src/index.html",
     "----BUILD-----------------------------------": "",
     "build": "parcel build src/index.html",
@@ -44,6 +45,7 @@
   },
   "dependencies": {
     "@asd14/m": "0.15.2",
+    "@asd14/redux-all-is-list": "0.2.0",
     "classnames": "2.2.6",
     "content-type": "1.0.4",
     "cuid": "2.1.4",
@@ -55,7 +57,6 @@
     "react-router-dom": "4.3.1",
     "react-router-redux": "4.0.8",
     "redux": "4.0.1",
-    "redux-all-is-list": "0.2.0",
     "sanitize.css": "8.0.0"
   },
   "devDependencies": {
@@ -63,6 +64,7 @@
     "@babel/cli": "7.1.5",
     "@babel/core": "7.1.6",
     "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-proposal-decorators": "7.1.6",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0",
     "@babel/plugin-proposal-pipeline-operator": "7.0.0",
     "@babel/plugin-transform-react-constant-elements": "7.0.0",
@@ -89,6 +91,7 @@
     "eslint-plugin-unicorn": "6.0.1",
     "flow-bin": "0.86.0",
     "ignore-styles": "5.0.1",
+    "json-server": "0.14.0",
     "jsx-control-statements": "3.2.8",
     "markdownlint-cli": "0.13.0",
     "nodemon": "1.18.6",
