--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lint": "npm run lint:md && npm run lint:css && npm run lint:js",
     "----TEST-------------------------------------": "",
     "test": "tape -r @babel/register -r ignore-styles src/**/*.test.jsx",
-    "tdd": "nodemon --watch src --exec \"npm run test | tap-diff\""
+    "tdd": "nodemon -e js,jsx,json,css --watch src --exec \"npm run test | tap-diff\""
   },
   "dependencies": {
     "@asd14/m": "0.15.2",
