--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,8 @@
 
     // disable since our pattern of naming does not match any defined case
     "unicorn/filename-case": "off",
+
+    "unicorn/no-fn-reference-in-iterator": "off",
   },
   "settings": {
     "react": {
