--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@asd14/m": "0.15.2",
     "@asd14/redux-all-is-list": "0.2.0",
+    "@fortawesome/fontawesome-free": "5.5.0",
     "classnames": "2.2.6",
     "content-type": "1.0.4",
     "cuid": "2.1.4",
@@ -82,27 +83,28 @@
     "eslint-plugin-flowtype-errors": "3.6.0",
     "eslint-plugin-html": "5.0.0",
     "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-json": "1.2.1",
+    "eslint-plugin-json": "1.3.2",
     "eslint-plugin-jsx-control-statements": "2.2.1",
     "eslint-plugin-no-inferred-method-name": "1.0.2",
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-unicorn": "6.0.1",
-    "flow-bin": "0.86.0",
+    "flow-bin": "0.87.0",
     "ignore-styles": "5.0.1",
     "json-server": "0.14.0",
     "jsx-control-statements": "3.2.8",
     "markdownlint-cli": "0.13.0",
-    "nodemon": "1.18.6",
+    "nodemon": "1.18.7",
     "npm-check": "5.9.0",
     "parcel-bundler": "1.10.3",
     "postcss": "7.0.6",
     "postcss-custom-properties": "8.0.9",
     "postcss-modules": "1.4.1",
-    "prettier": "1.15.2",
+    "postcss-preset-env": "6.4.0",
+    "prettier": "1.15.3",
     "react-test-renderer": "16.6.3",
-    "stylelint": "9.8.0",
+    "stylelint": "9.9.0",
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "2.0.0",
     "tap-diff": "0.1.1",
