Add postcss-preset-env for automatic plugin install based on package.browserlist

--- a/.postcssrc
+++ b/.postcssrc
@@ -4,6 +4,10 @@
     "postcss-custom-properties": {
       "preserve": false,
       "importFrom": "src/core/variables.css"
-    }
+    },
+    "postcss-preset-env": {
+      "preserve": false,
+      "stage": 2,
+    },
   }
 }
