Install path-to-regexp and qs for making API calls

--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "content-type": "1.0.4",
     "cuid": "2.1.4",
     "debug": "4.1.0",
+    "path-to-regexp": "2.4.0",
     "prop-types": "15.6.2",
+    "qs": "6.6.0",
     "react": "16.6.3",
     "react-dom": "16.6.3",
     "react-redux": "5.1.1",
@@ -99,7 +101,6 @@
     "npm-check": "5.9.0",
     "parcel-bundler": "1.10.3",
     "postcss": "7.0.6",
-    "postcss-custom-properties": "8.0.9",
     "postcss-modules": "1.4.1",
     "postcss-preset-env": "6.4.0",
     "prettier": "1.15.3",
