--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "setup": "npm run clean && npm i && flow-typed install && npm audit fix",
     "update": "npm-check -u",
     "----DEV--------------------------------------": "",
-    "start:mock": "json-server --watch mock-db.json",
+    "start:mock": "json-server --delay 300 --watch mock-db.json",
     "start": "parcel src/index.html",
-    "----BUILD-----------------------------------": "",
+    "----BUILD------------------------------------": "",
     "build": "parcel build src/index.html",
     "build:babel": "babel src --out-dir compile",
     "prepublishOnly": "npm audit fix && npm test && npm run lint",
@@ -45,8 +45,8 @@
   },
   "dependencies": {
     "@asd14/m": "0.15.2",
-    "@asd14/redux-all-is-list": "0.2.0",
-    "@fortawesome/fontawesome-free": "5.5.0",
+    "@asd14/redux-all-is-list": "0.2.2",
+    "@fortawesome/fontawesome-free": "5.6.0",
     "classnames": "2.2.6",
     "content-type": "1.0.4",
     "cuid": "2.1.4",
@@ -56,28 +56,30 @@
     "qs": "6.6.0",
     "react": "16.6.3",
     "react-dom": "16.6.3",
-    "react-redux": "5.1.1",
+    "react-redux": "6.0.0",
     "react-router-dom": "4.3.1",
     "react-router-redux": "4.0.8",
     "redux": "4.0.1",
     "sanitize.css": "8.0.0"
   },
   "devDependencies": {
-    "@asd14/eslint-config": "3.0.2",
-    "@babel/cli": "7.1.5",
-    "@babel/core": "7.1.6",
-    "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/plugin-proposal-decorators": "7.1.6",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0",
-    "@babel/plugin-proposal-pipeline-operator": "7.0.0",
-    "@babel/plugin-transform-react-constant-elements": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.1.0",
-    "@babel/preset-env": "7.1.6",
+    "@asd14/eslint-config": "4.0.1",
+    "@babel/cli": "7.2.0",
+    "@babel/core": "7.2.0",
+    "@babel/plugin-proposal-class-properties": "7.2.1",
+    "@babel/plugin-proposal-decorators": "7.2.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.2.0",
+    "@babel/plugin-proposal-pipeline-operator": "7.2.0",
+    "@babel/plugin-transform-react-constant-elements": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.2.0",
+    "@babel/preset-env": "7.2.0",
     "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
     "babel-eslint": "10.0.1",
-    "eslint": "5.9.0",
+    "enzyme": "3.7.0",
+    "enzyme-adapter-react-16": "1.7.0",
+    "eslint": "5.10.0",
     "eslint-config-prettier": "3.3.0",
     "eslint-import-resolver-node": "0.3.2",
     "eslint-plugin-compat": "2.6.3",
@@ -86,7 +88,6 @@
     "eslint-plugin-html": "5.0.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-json": "1.3.2",
-    "eslint-plugin-jsx-control-statements": "2.2.1",
     "eslint-plugin-no-inferred-method-name": "1.0.2",
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-promise": "4.0.1",
@@ -96,7 +97,6 @@
     "flow-typed": "2.5.1",
     "ignore-styles": "5.0.1",
     "json-server": "0.14.0",
-    "jsx-control-statements": "3.2.8",
     "markdownlint-cli": "0.13.0",
     "nodemon": "1.18.7",
     "npm-check": "5.9.0",
