Add preview, fix pipeline error

--- a/.babelrc
+++ b/.babelrc
@@ -35,9 +35,9 @@
     //   |> capitalize
     //   |> exclaim;
     // result //=> "Hello, hello!"
-    // [ "@babel/plugin-proposal-pipeline-operator", {
-    //   "proposal": "minimal"
-    // } ],
+    [ "@babel/plugin-proposal-pipeline-operator", {
+      "proposal": "minimal"
+    } ],
   ],
 
   "env": {
