Tweak eslint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,8 @@
       "capIsNewExceptions": [ "POST", "GET", "PATCH", "DELETE" ]
     } ],
 
+    "promise/catch-or-return": "warn",
+    "import/exports-last": "off",
     "react/destructuring-assignment": "warn",
   },
   "settings": {
