Update packages, add more utility scripts

--- a/package.json
+++ b/package.json
@@ -27,17 +27,20 @@
     "setup": "npm run clean && npm i && flow-typed install && npm audit fix",
     "update": "npm-check -u",
     "----DEV--------------------------------------": "",
-    "start:mock": "json-server --delay 300 --watch mock-db.json",
+    "start:mock": "json-server --delay 500 --watch mock-db.json",
     "start": "parcel src/index.html",
     "----BUILD------------------------------------": "",
     "build": "parcel build src/index.html",
     "build:babel": "babel src --out-dir compile",
     "prepublishOnly": "npm audit fix && npm test && npm run lint",
     "----LINT-------------------------------------": "",
-    "lint:css": "stylelint src/**/*.css",
-    "lint:flow": "flow",
+    "lint:css": "stylelint \"src/*.css\" \"src/**/*.css\"",
+    "lint:css:watch": "nodemon -e css --watch src --exec \"npm run lint:css || exit 1\"",
+    "lint:flow": "flow status",
+    "lint:flow:watch": "nodemon -e js,jsx --watch src --exec \"npm run lint:flow || exit 1\"",
     "lint:md": "markdownlint *.md",
     "lint:js": "eslint --ext .jsx,.js src",
+    "lint:js:watch": "nodemon -e js,jsx --watch src --exec \"npm run lint:js || exit 1\"",
     "lint": "npm run lint:md && npm run lint:css && npm run lint:js",
     "----TEST-------------------------------------": "",
     "test": "tape -r @babel/register -r ignore-styles src/**/*.test.jsx",
@@ -47,7 +50,7 @@
     "@asd14/m": "0.15.2",
     "@asd14/redux-all-is-list": "0.2.2",
     "@babel/runtime": "7.2.0",
-    "@fortawesome/fontawesome-free": "5.6.0",
+    "@fortawesome/fontawesome-free": "5.6.1",
     "classnames": "2.2.6",
     "content-type": "1.0.4",
     "cuid": "2.1.4",
@@ -66,8 +69,9 @@
   "devDependencies": {
     "@asd14/eslint-config": "4.0.1",
     "@babel/cli": "7.2.0",
-    "@babel/core": "7.2.0",
+    "@babel/core": "7.2.2",
     "@babel/plugin-proposal-class-properties": "7.2.1",
+    "@babel/plugin-proposal-decorators": "7.2.2",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.2.0",
     "@babel/plugin-transform-react-constant-elements": "7.2.0",
     "@babel/plugin-transform-runtime": "7.2.0",
@@ -92,17 +96,18 @@
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-unicorn": "6.0.1",
-    "flow-bin": "0.88.0",
+    "flow-bin": "0.89.0",
     "flow-typed": "2.5.1",
     "ignore-styles": "5.0.1",
     "json-server": "0.14.0",
     "markdownlint-cli": "0.13.0",
-    "nodemon": "1.18.8",
+    "nodemon": "1.18.9",
     "npm-check": "5.9.0",
-    "parcel-bundler": "1.10.3",
-    "postcss": "7.0.6",
+    "parcel-bundler": "1.11.0",
+    "postcss": "7.0.7",
+    "postcss-color-function": "4.0.1",
     "postcss-modules": "1.4.1",
-    "postcss-preset-env": "6.4.0",
+    "postcss-preset-env": "6.5.0",
     "prettier": "1.15.3",
     "react-test-renderer": "16.6.3",
     "stylelint": "9.9.0",
